--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "ioredis": "^5.6.1",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.1.0",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7"
   }
