--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.5.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "http-errors": "~1.6.3",
     "i18next": "^25.2.1",
     "i18next-fs-backend": "^2.6.0",
