--- a/env/dev.env
+++ b/env/dev.env
@@ -1,6 +1,6 @@
 # 开发环境配置
 NODE_ENV=dev
-PORT=3002
+PORT=3000
 
 # API 基础URL
 API_BASE_URL=http://localhost:3002
@@ -13,8 +13,8 @@ DB_DIALECT=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASS=password
-DB_NAME=express_api_dev
+DB_PASS=123456
+DB_NAME=testSxx
 
 # 数据库连接池配置
 DB_POOL_MAX=20         # 最大连接数
