--- a/package.json
+++ b/package.json
@@ -47,12 +47,9 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "eslint": "^8.55.0",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
-    "prettier": "^3.1.1",
-    "supertest": "^6.3.3"
+    "prettier": "^3.1.1"
   },
   "engines": {
     "node": ">=16.0.0",
