--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "eslint . --ext .js --fix",
     "format": "prettier --write .",
     "db:sync": "node scripts/sync-db.js",
+    "payment:sync": "node scripts/sync-payment-db.js",
     "dev": "npm run start",
     "build": "echo 'No build step required for Node.js'",
     "health": "node common/healthcheck.js"
