--- a/env/pro.env
+++ b/env/pro.env
@@ -19,12 +19,12 @@ RISK_CONTROL_SERVICE=http://localhost:3007
 ANALYTICS_SERVICE=http://localhost:3008
 CUSTOMER_SUPPORT_SERVICE=http://localhost:3009
 
-# 开发环境配置
-NODE_ENV=dev
+# 生产环境配置
+NODE_ENV=development
 PORT=3000
 
 # API 基础URL
-API_BASE_URL=http://localhost:3000
+API_BASE_URL=http://localhost:3002
 
 # 集群模式（true/false）
 CLUSTER_MODE=false
@@ -60,22 +60,4 @@ CACHE_TTL_LONG=86400   # 长期缓存 - 1天
 
 # JWT配置
 JWT_SECRET=your_development_jwt_secret_key
-JWT_EXPIRES_IN=1d
-
-# MongoDB配置
-MONGO_URI=mongodb://localhost:27017/testSxx
-MONGO_HOST=localhost
-MONGO_PORT=27017
-MONGO_DB_NAME=testSxx
-MONGO_USER=
-MONGO_PASS=
-
-# MongoDB连接池配置
-MONGO_POOL_MAX=10          # 最大连接数
-MONGO_POOL_MIN=2           # 最小连接数
-MONGO_CONNECT_TIMEOUT=30000 # 连接超时时间(毫秒)
-MONGO_SERVER_SELECTION_TIMEOUT=5000 # 服务器选择超时时间(毫秒)
-MONGO_SOCKET_TIMEOUT=45000  # Socket超时时间(毫秒)
-MONGO_MAX_IDLE_TIME=30000   # 最大空闲时间(毫秒)
-MONGO_RETRY_WRITES=true     # 启用重试写入
-MONGO_RETRY_READS=true      # 启用重试读取
+JWT_EXPIRES_IN=1d 
