--- a/package.json
+++ b/package.json
@@ -36,13 +36,12 @@
     "mysql2": "3.2.4",
     "node-cron": "^3.0.3",
     "sequelize": "^6.35.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "moment": "^2.30.1",
     "nodemon": "^3.0.2"
   },
   "engines": {
@@ -55,8 +54,7 @@
     "rest",
     "mysql",
     "redis",
-    "jwt",
-    "swagger"
+    "jwt"
   ],
   "author": "Your Name",
   "license": "MIT"
